--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -22,6 +22,9 @@
     "place_order":"Sipariş Ver",
     "order_placed_successfully":"Sipariş Başarıyla Verildi!",
     "no_items_selected":"Sepetiniz Boş!",
-    "user_interaction_end":"Kullanıcı etkileşimi sona erdi ve otomat sıfırlandı!"
-    
+    "user_interaction_end":"Kullanıcı etkileşimi sona erdi ve otomat sıfırlandı!",
+    "invalid_coin":"Coin geçerli değildir",
+    "money_collected":"Tüm para otomattan çekildi",
+    "collected_money":"Toplanan para",
+    "withdraw_cash":"Para çek"
 }
