--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -26,5 +26,6 @@
     "invalid_coin":"Coin geçerli değildir",
     "money_collected":"Tüm para otomattan çekildi",
     "collected_money":"Toplanan para",
-    "withdraw_cash":"Para çek"
+    "withdraw_cash":"Para çek",
+    "enter_password":"Şifreyi girin"
 }
