--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,5 +27,6 @@
     "invalid_coin":"Invalid coin",
     "money_collected":"The money has been withdrawn from the vending machine",
     "collected_money":"Total collected money",
-    "withdraw_cash":"Withdraw cash"
+    "withdraw_cash":"Withdraw cash",
+    "enter_password":"Enter password"
   }
