--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,6 +31,7 @@
     "enter_password":"Enter password",
     "lighting_active":"Lighting is active",
     "cooling_on":"Cooling on",
-    "cooling_off":"Cooling off"
+    "cooling_off":"Cooling off",
+    "withdraw_money_info":"To be able to withdraw money, the entered password must be correct and the collected amount of money must be greater than $0."
 
   }
